<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mian_linear"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.DeclarationActivity">

    <ScrollView
        android:id="@+id/scroll"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/linear"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_weight="0"
                android:background="?attr/colorPrimary"
                android:fitsSystemWindows="true"
                android:minHeight="?attr/actionBarSize"
                app:popupTheme="@style/ThemeOverlay.AppCompat.Dark"
                app:titleTextColor="@color/cardview_light_background">

                <ImageView
                    android:id="@+id/button"
                    android:layout_width="50dp"
                    android:layout_height="40dp"
                    android:layout_marginBottom="2dp"
                    android:layout_marginLeft="310dp"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/ic_send_black_24dp"
                    android:onClick="onclick"
                    android:text="@string/button" />

            </android.support.v7.widget.Toolbar>

            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:layout_weight="0"
                android:text=" * Informations obligatoires :"
                android:textSize="14sp"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/title_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/titre"
                    android:inputType="text" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/prenom_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:hint="@string/nom" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:background="@drawable/border_black"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/category"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.5"
                    android:text="Catégorie" />

                <Spinner
                    android:id="@+id/Spinner_category"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dialog"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="1dp">

                </Spinner>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1"
                android:background="@drawable/border_black"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/urgence"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="10dp"
                    android:layout_weight="0.5"
                    android:text="@string/hh" />

                <Spinner
                    android:id="@+id/Spinner_urgence"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginRight="10dp"
                    android:layout_weight="1"
                    android:background="@android:drawable/btn_dropdown"
                    android:spinnerMode="dialog"
                    tools:layout_editor_absoluteX="0dp"
                    tools:layout_editor_absoluteY="1dp">

                </Spinner>
            </LinearLayout>


            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_weight="0"
                android:text="   Informations optionnelles :"
                android:textStyle="bold" />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_weight="1">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/phone_input"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/t_l_phone"
                    android:inputType="phone" />

            </android.support.design.widget.TextInputLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:orientation="horizontal">

                <ImageButton
                    android:id="@+id/import_contact_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="0"
                    app:srcCompat="@drawable/ic_contact_phone_black_24dp" />

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="0">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/assignee_name_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_weight="1"
                        android:hint="@string/destinataire"
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="0"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@+id/t_l_phone"
                    android:inputType="phone" />

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/assignee_number_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Numéro du destinataire" />
                </android.support.design.widget.TextInputLayout>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="50dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:hint="Localisation : "
                        android:inputType="text" />
                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/description_text"
                    android:layout_width="match_parent"
                    android:layout_height="80dp"
                    android:layout_marginBottom="2dp">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/description_input"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginBottom="2dp"
                        android:hint="@string/description"
                        android:inputType="text" />

                </android.support.design.widget.TextInputLayout>

                <Switch
                    android:id="@+id/mapopener"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="@string/partagez_votre_localisation"
                    android:textSize="16sp" />

                <Switch
                    android:id="@+id/locationCustomer"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:text="Déplacer le point"
                    android:textSize="16sp"
                    android:visibility="gone" />


                <RelativeLayout
                    android:id="@+id/map_layout"
                    android:layout_width="match_parent"
                    android:layout_height="300dp">

            </LinearLayout>

        </LinearLayout>


    </ScrollView>

</LinearLayout>